--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,5 @@
-# Created by https://www.gitignore.io/api/java,windows
-# Edit at https://www.gitignore.io/?templates=java,windows
-
-### Java ###
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Created by https://www.gitignore.io/api/windows
+# Edit at https://www.gitignore.io/?templates=windows
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -51,4 +26,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/java,windows
+# End of https://www.gitignore.io/api/windows
